Fix layout issues, remove delivery option for now.

--- a/less/_globals.less
+++ b/less/_globals.less
@@ -74,6 +74,10 @@ p {
   }
 }
 
+.page-wrap {
+  margin: 0;
+}
+
 .main-content {
   font-size: 0;
   background-color: #fff;
