--- a/less/components.less
+++ b/less/components.less
@@ -21,13 +21,13 @@
   }
 }
 
-#feelinLucky {
-  margin-right: 4rem;
+// #feelinLucky {
+//   margin-right: 4rem;
 
-  @media @phone-xs {
-    margin-right: 2rem;
-  }
-}
+//   @media @phone-xs {
+//     margin-right: 2rem;
+//   }
+// }
 
 .tip {
   font-size: 14px;
